--- a/source/style.css
+++ b/source/style.css
@@ -29,10 +29,11 @@ button {
   border: 1px solid rgb(252, 252, 161);
   box-shadow: 3px 3px 3px grey;
   padding: 4px 10px;
+  margin-left: -10px;
 }
 button:hover {
   transition: all 200ms ease-in-out;
-  background-color: rgb(236, 236, 76);
+  background-color: rgb(236, 236, 119);
   opacity: 0, 7;
 }
 .container {
