--- a/source/style.css
+++ b/source/style.css
@@ -67,26 +67,26 @@ button:hover {
 }
 .slash {
   font-size: 20px;
-  color: grey;
+  color: yellow;
 }
 #celcius {
   text-decoration: none;
   font-size: 20px;
-  color: grey;
+  color: yellow;
 }
 #celcius:hover {
   transition: all 200ms ease-in-out;
-  color: rgb(109, 108, 108);
+  color: rgb(221, 221, 69);
 }
 #fahrenheit {
   text-decoration: none;
   font-size: 20px;
-  color: grey;
+  color: yellow;
 }
 
 #fahrenheit:hover {
   transition: all 200ms ease-in-out;
-  color: rgb(109, 108, 108);
+  color: rgb(221, 221, 69);
 }
 #newCity {
   padding: 4px 10px;
