--- a/source/style.css
+++ b/source/style.css
@@ -1,3 +1,10 @@
+body {
+  color: rgb(61, 59, 59);
+  background-image: url("https://rare-gallery.com/uploads/posts/5306315-mountain-blue-teal-range-mountain-range-layers-amazing-wallpaper-desktop-wallpaper-desktop-background-monochrome-layer-shape-minimalist-minimal-wallpaper-silhouette-light-shadow-landscape-natu.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
 h1 {
   padding-top: 20px;
   text-align: left;
@@ -41,12 +48,21 @@ button:hover {
   text-align: left;
   border: 2px solid none;
   border-radius: 10px;
-  max-width: 600px;
+  max-width: 800px;
   padding: 20px;
   margin-top: 20px;
-  background: linear-gradient(to top, #c4c5c7 0%, #dcdddf 52%, #ebebeb 100%);
+  background: linear-gradient(
+    111.4deg,
+    rgb(209, 231, 235) 7.4%,
+    rgb(238, 219, 199) 51.4%,
+    rgb(255, 159, 122) 82.6%,
+    rgb(255, 109, 58) 100.2%
+  );
+  /*background: linear-gradient(to top, #c4c5c7 0%, #dcdddf 52%, #ebebeb 100%);
+  */
   font-family: "Poppins", sans-serif;
   box-shadow: 5px 5px 5px grey;
+  opacity: 0.7;
 }
 
 .changeDegree {
@@ -68,7 +84,7 @@ button:hover {
 }
 .dayHour {
   font-size: 20px;
-  color: #ec6e4c;
+  /*color: #ec6e4c;*/
 }
 .weather-forecast {
   text-align: center;
@@ -76,15 +92,19 @@ button:hover {
 }
 .weather-forecast-date {
   font-size: 16px;
+  padding-bottom: 10px;
 }
-
+.weatherDescription {
+}
 .forecast-max {
   color: #ec6e4c;
 }
 .forecast-min {
   opacity: 0.6;
 }
-
+.sourceLink {
+  color: #ec6e4c;
+}
 #celcius {
   text-decoration: none;
   font-size: 20px;
